feat: add eslint config, and fix all warning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,44 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "plugins": [
+    "react",
+    "react-hooks",
+    "@stylistic"
+  ],
+  "rules": {
+    "object-curly-spacing": [
+      "warn",
+      "always"
+    ],
+    "no-duplicate-imports": "error",
+    "no-debugger": "warn",
+    "no-dupe-args": "error",
+    "no-irregular-whitespace": "error",
+    "camelcase": "error",
+    "no-var": "error",
+    "react/react-in-jsx-scope": 0,
+    "react/prop-types": 0,
+    "react/no-unescaped-entities": 0,
+    "react-hooks/exhaustive-deps": 1,
+    "react-hooks/rules-of-hooks": "error",
+    "@stylistic/indent": [
+      "warn",
+      4
+    ],
+    "@stylistic/array-bracket-spacing": [
+      "warn",
+      "always"
+    ],
+    "@stylistic/quotes": [
+      "warn",
+      "single"
+    ],
+    "@stylistic/semi": [
+      "warn",
+      "never"
+    ],
+    "@stylistic/arrow-spacing": "warn",
+    "@stylistic/no-trailing-spaces": "warn",
+    "@stylistic/no-multi-spaces": "warn"
+  }
 }
